# LocalChat

./: .gitmodules  README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/: Chat.kt  Home.kt  Jni.kt
app/src/main/java/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/uicfg/: Color.kt  Theme.kt  Type.kt
app/src/main/jni/: CMakeLists.txt  llm_mnn_jni.cpp
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
gradle/wrapper/: gradle-wrapper.properties
